# staticc

./: README.md  setup.cfg
staticc/: analyzers.py  delta.py  flow.py
tests/: test_delta.py  test_flow.py
