[metadata]
name = staticc
version = 0.1.0a0
description = Static analysis toolkit for Python AST
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/staticc
author = isidentical
author_email = isidentical@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Source = https://github.com/isidentical/staticc
    Tracker = https://github.com/isidentical/staticc/issues

[options]
packages = find:
python_requires = >=3.9
